# GitDB

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  Dockerfile.build-linux  LICENSE  Makefile  README.md  WHITEPAPER.md  gitdb.spec  pyproject.toml
gitdb/: __init__.py  ambient.py  backup.py  cli.py  cloud_ingest.py  core.py  crush.py  delta.py  distributed.py  documents.py  embed.py  encryption.py  fhe.py  gitdb.proto  grpc_service.py  hooks.py  indexes.py  ingest.py  objects.py  pullrequest.py  remote.py  schema.py  server.py  snapshots.py  storage.py  streaming.py  structured.py  types.py  watches.py  working_tree.py
tests/: test_ambient.py  test_backup.py  test_cloud_ingest.py  test_core.py  test_crush.py  test_distributed.py  test_documents.py  test_embed.py  test_encryption.py  test_fhe.py  test_grpc.py  test_hooks.py  test_hooks_integration.py  test_indexes.py  test_ingest.py  test_magic.py  test_remote.py  test_schema.py  test_server.py  test_snapshots.py  test_storage.py  test_streaming.py  test_structured.py  test_tables.py  test_transactions.py  test_watches.py
